scss/style.scss
/*!
* Convrtr styles
*/
@import "../node_modules/bootstrap-scss/functions";

@import "../node_modules/bootstrap-scss/variables";
@import "../node_modules/bootstrap-scss/variables-dark";

@import "../node_modules/bootstrap-scss/maps";
@import "../node_modules/bootstrap-scss/mixins";
@import "../node_modules/bootstrap-scss/utilities";
@import "../node_modules/bootstrap-scss/root";

// Utilities
@import "../node_modules/bootstrap-scss/utilities/api";

@font-face {
    font-family: "TerminalGlyphs";
    font-style: normal;
    font-weight: normal;
	font-family:'TerminalGlyphs';
    src:url('../fonts/spherograms.eot');
    src:url('../fonts/spherograms.eot?#iefix') format('embedded-opentype'),url('../fonts/spherograms.woff') format('woff'),url('../assets/fonts/spherograms.svg#Spherograms') format('svg');
}
@font-face {
    font-family: 'Covenant';
    font-style: normal;
    font-weight: normal;
    font-family: 'Covenant';
    src:  url('../fonts/covenant.eot');
    src:  url('../fonts/covenant.eot?#iefix') format('embedded-opentype'),url('../fonts/covenant.ttf') format('truetype'),url('../fonts/covenant.woff') format('woff'),url('../assets/fonts/covenant.svg#Covenant') format('svg');
}

:root {
    --convrtr-bg-color: rgb(21, 96, 82);
    --bs-bg-success: 21, 96, 82;
    --convrtr-bg-color-rgb: 21, 96, 82;
    --convrtr-bg-color-10: #0f735f;
    --convrtr-bg-color-20: #0e6655;
    --convrtr-bg-color-25: #11806a40;
    --convrtr-bg-color-25-rgb: rgba(17, 128, 106, 0.25);
    --convrtr-bg-color-50-rgb: rgba(17, 128, 106, 0.5);
    --convrtr-bg-color-75-rgb: rgba(17, 128, 106, 0.75);
    --convrtr-bg-color-50: #88c0b5;
    --convrtr-bg-color-50-rgba: 136, 192, 181;
    --convrtr-bg-color-75: #4da08f;
    --convrtr-bg-color-75rbg: 77, 160, 143;
    --convrtr-color-link: 150, 209, 197;
    --convrtr-base-color: #212529;
    --convrtr-textarea: rgba(0,0,0,.03);
    --convrtr-switch-thumb: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2388c0b5'/%3e%3c/svg%3e");
    --convrtr-switch-checked: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
    --convrtr-nav-link-padding-x: 0.25rem;
    --convrtr-nav-link-padding-y: 0.75rem;
    --convrtr-nav-tabs-border-radius: 0.375rem;
    --convrtr-nav-tabs-border-color: #dee2e6;
    --convrtr-code-opacity: 0.2;
    --bs-bg-dark-opacity: 0.08;
}
[data-bs-theme="dark"] {
    --convrtr-base-color: #dee2e6;
}
body {
    color: var(--convrtr-base-color);
    position: relative;
}

:target::before { 
    content: "";
    display: block;
    height: 64px; /* Height of your navbar */
    margin-top: -64px; /* Negative value of navbar height */
    visibility: hidden;
}

.border-convrtr {
    border-color: var(--convrtr-bg-color) !important;
}
.text-convrtr {
    --bs-text-opacity: 1;
    color: rgba(var(--bs-bg-success), var(--bs-text-opacity)) !important;
}
@include color-mode(dark) {
    .text-convrtr {
        --bs-btn-color: var(--bs-white);
        color: rgba(var(--convrtr-color-link), var(--bs-text-opacity)) !important;
    }
}
.bg-convrtr {
    background-color: var(--convrtr-bg-color);
}
.text-bg-convrtr {
    --bs-text-opacity: 1;
    color: var(--bs-white) !important;
    background-color: rgba(var(--convrtr-bg-color-75rbg), var(--bs-text-opacity)) !important;
}

.btn-link {
    --bs-btn-color: var(--convrtr-base-color) !important;
    &:hover {
        --bs-btn-hover-color: var(--convrtr-bg-color-10) !important;
    }
    &:active,
    &:focus-visible {
        --bs-btn-focus-shadow-rgb: 255, 255, 255;
    }
}

.btn-convrtr {
    --bs-btn-font-weight: 600;
    --bs-btn-color: var(--bs-white);
    --bs-btn-bg: var(--convrtr-bg-color);
    --bs-btn-border-color: var(--convrtr-bg-color);
    --bs-btn-border-radius: .5rem;
    --bs-btn-hover-color: var(--bs-white);
    --bs-btn-hover-bg: var(--convrtr-bg-color-10);
    --bs-btn-hover-border-color: var(--convrtr-bg-color-10);
    --bs-btn-active-color: var(--bs-btn-hover-color);
    --bs-btn-active-bg: var(--convrtr-bg-color-20);
    --bs-btn-active-border-color: var(--convrtr-bg-color-20);
    --bs-btn-padding-y: 0.6rem;
}
.btn-outline-convrtr {
    --bs-btn-font-weight: 600;
    --bs-btn-color: var(--convrtr-bg-color);
    --bs-btn-bg: var(--bs-white);
    --bs-btn-border-color: var(--convrtr-bg-color);
    --bs-btn-border-radius: .5rem;
    --bs-btn-hover-color: var(--bs-white);
    --bs-btn-hover-bg: var(--convrtr-bg-color-10);
    --bs-btn-hover-border-color: var(--convrtr-bg-color-10);
    --bs-btn-active-color: var(--bs-btn-hover-color);
    --bs-btn-active-bg: var(--convrtr-bg-color-20);
    --bs-btn-active-border-color: var(--convrtr-bg-color-20);
}
@include color-mode(dark) {
    .btn-outline-convrtr {
        --bs-btn-color: var(--bs-white);
        --bs-btn-bg: var(--convrtr-bg-color-25-rgb);
    }
}

.convrtr-spin {
    -webkit-animation-name: convrtr-spin;
    animation-name: convrtr-spin;
    -webkit-animation-duration: var(--convrtr-animation-duration, 1s);
    animation-duration: var(--convrtr-animation-duration, 1s);
    -webkit-animation-iteration-count: var(--convrtr-animation-iteration-count, infinite);
    animation-iteration-count: var(--convrtr-animation-iteration-count, infinite);
    -webkit-animation-timing-function: var(--convrtr-animation-timing, linear);
    animation-timing-function: var(--convrtr-animation-timing, linear);
}
@keyframes convrtr-spin {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
}
.btn-reset-data {
    .bi {
        display: inline-flex;
        align-self: center;
    }
}
.btn-btt,
.btn-link {
    --bs-btn-padding-x: 0.85rem;
    --bs-btn-padding-y: 0.55rem;
}
.btn-md,
.btn-reset-data,
.btn-theme {
    --bs-btn-padding-x: 0.85rem;
    --bs-btn-padding-y: 0.575rem;
}
/* ... */

